--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
     margin: 0 auto;
     padding: 0;
+	outline-color: none;
 }
 
 body p {
@@ -229,9 +230,8 @@ h1,h2,h3,h4,h5 {
     margin: 0;
     width: 100%;
     height: 100%;
-    border-top: 4px solid black;
     text-align: center;
-    padding-top: 32px;
+    padding-top: 36px;
 }
 
 #contact > h2 {
@@ -300,7 +300,6 @@ h1,h2,h3,h4,h5 {
 
 footer {
     background-color: #262626;
-    border-top: 4px solid black;
     height: 100%;
     width: 100%;
     text-align: center;
